possible fix to unintended homepage & contact page overflow scrolling

--- a/contact.html
+++ b/contact.html
@@ -55,13 +55,13 @@
             justify-content: end;
         }
         .grid-socials li a img{
-            width: 6rem;
+            width: 5vw;
             margin: 0 auto;
         }
         .grid-socials li a p{
             text-align: center;
             font-variation-settings: "wght" 300, "wdth" 100, "ital" 0;
-            font-size: var(--txt-h4);
+            font-size: 1.25vw;
         }
 
         #discord-account-link{
@@ -180,6 +180,13 @@
                 right: -3%;
             }
 
+            .grid-socials li a img{
+                width: 6vw;
+            }
+            .grid-socials li a p{
+                font-size: 1.5vw;
+            }
+
         }
 
         @media only screen and (max-width: 1050px){
@@ -204,7 +211,7 @@
                 gap: var(--space-small);
             }
             .grid-socials li a img{
-                width: 3.5rem;
+                width: 4rem;
                 margin: 0;
             }
             .grid-socials li a p{
@@ -253,6 +260,7 @@
                 .grid-socials li a p{
                     text-align: center;
                 }
+
                 .toast{
                     bottom: -25%;
                     left: 50%;
