--- a/index.html
+++ b/index.html
@@ -316,11 +316,12 @@
         .hero-subheading{
             font-variation-settings: "wght" 500, "wdth" 100, "ital" 0;
             margin-bottom: var(--space-small);
+            font-size: 2vw;
         }
         .hero-paragraph{
             font-variation-settings: "wght" 300, "wdth" 100, "ital" 0;
-            font-size: calc(var(--txt-p) * 1.35);
-            line-height: calc(var(--txt-lh-p) * 1.2);
+            font-size: 1.5vw;
+            line-height: 2vw;
         }
 
         /* Tablet landscape */
@@ -330,12 +331,9 @@
                 right: -25%;
             }
             .hero-subheading{
-                font-size: calc(var(--txt-h2) / 1.4);
                 margin-bottom: var(--space-small);
             }
             .hero-paragraph{
-                font-size: calc(var(--txt-p) * 1.2);
-                line-height: calc(var(--txt-lh-p) * 1.15);
                 margin-bottom: var(--space-small);
             }
 
