another fix attempt

--- a/commissions.html
+++ b/commissions.html
@@ -10,7 +10,7 @@
     <link rel="preload" href="/core.css" as="style"/>
     <link rel="preload" href="/fonts.css" as="style"/>
     
-    <script type="text/javascript" src="/main.js"></script>
+    <script type="text/javascript" src="/main.js" defer></script>
     <link href="https://use.typekit.net/qko7viz.css" rel="preload" as="style" onload="this.rel='stylesheet'">
     <link rel="stylesheet" href="/core.css">
     <link rel="stylesheet" href="/fonts.css">
