--- a/commissions.html
+++ b/commissions.html
@@ -10,7 +10,7 @@
     <link rel="preload" href="/core.css" as="style"/>
     <link rel="preload" href="/fonts.css" as="style"/>
     
-    <script type="text/javascript" src="/main.js" defer></script>
+    <script type="text/javascript" src="/main.js"></script>
     <link href="https://use.typekit.net/qko7viz.css" rel="preload" as="style" onload="this.rel='stylesheet'">
     <link rel="stylesheet" href="/core.css">
     <link rel="stylesheet" href="/fonts.css">
@@ -736,14 +736,14 @@
                     <path d="M95.64,0C42.82,0,0,53.42,0,119.32s42.82,119.32,95.64,119.32,95.64-53.42,95.64-119.32S148.46,0,95.64,0Zm0,26.09c8.44,0,15.29,8.54,15.29,19.07s-6.84,19.07-15.29,19.07-15.29-8.54-15.29-19.07,6.84-19.07,15.29-19.07Zm-59.44,112.3c-8.44,0-15.29-8.54-15.29-19.07s6.84-19.07,15.29-19.07,15.29,8.54,15.29,19.07-6.84,19.07-15.29,19.07Zm59.44,74.16c-8.44,0-15.29-8.54-15.29-19.07s6.84-19.07,15.29-19.07,15.29,8.54,15.29,19.07-6.84,19.07-15.29,19.07Zm0-57.65c-15.75,0-28.52-15.93-28.52-35.59s12.77-35.59,28.52-35.59,28.52,15.93,28.52,35.59-12.77,35.59-28.52,35.59Zm61.99-16.52c-8.44,0-15.29-8.54-15.29-19.07s6.84-19.07,15.29-19.07,15.29,8.54,15.29,19.07-6.84,19.07-15.29,19.07Z"/>
                     <path d="M191.9,344.35c0-2.86-1.18-5.43-3.07-7.29l99.25-101.55-22.68,6.97c-27.15,8.34-49.48,27.84-61.39,53.62l-18.02,39c-1.3-.6-2.74-.95-4.27-.95-2.12,0-4.08,.65-5.71,1.75l-18.39-27.19c-9.84-14.54-25.6-21.98-41.44-21.98-13.91,0-27.87,5.74-37.91,17.45-13.53,15.78-2.32,40.17,18.47,40.17h74.79c0,2.81,1.14,5.36,2.99,7.21l-52.88,52.88c-14.7,14.7-5.39,39.87,15.34,41.46,1.32,.1,2.64,.15,3.93,.15,31.01,0,54.97-28.38,48.97-59.46l-6.22-32.24c4.7-.9,8.26-5.04,8.26-10Zm-95.17-9.33c-6.02,0-11.12-3.27-13.63-8.73-2.52-5.47-1.68-11.46,2.24-16.03,7.73-9.02,18.97-14.19,30.83-14.19,13.53,0,26.14,6.69,33.71,17.88l14.26,21.08H96.73Zm75.43,86.91c-7.76,9.4-19.16,14.8-31.26,14.8-1.06,0-2.15-.04-3.22-.12-6-.46-10.83-4.11-12.92-9.75-2.09-5.65-.79-11.56,3.46-15.81l47.67-47.67,4.82,24.99c2.31,11.96-.81,24.19-8.55,33.57Z"/>
                 </svg>
-                <video id="hero-video" width="100%" autoplay muted loop playsinline preload="none">
+                <video id="hero-video" width="100%" autoplay muted loop playsinline preload="metadata">
                     <source src="/video/websitevid_01.mp4" type="video/mp4">
                     Your browser doesn't support video elements.
                 </video>
             </div>
 
             <main class="grid-middle">
-                <video width="100%" autoplay muted loop playsinline preload="none">
+                <video width="100%" autoplay muted loop playsinline preload="metadata">
                     <source src="/video/websitevid_02.mp4" type="video/mp4">
                     Your browser doesn't support video elements.
                 </video>
