--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,8 @@
 
         .grid-hero-lt{
             grid-area: hero-lt;
-            width: 100%;
+            margin-inline: auto;
+            min-width: 90%;
         }
         .grid-socials{
             grid-area: socials;
