--- a/portfolio/steamvr_tutorial/index.html
+++ b/portfolio/steamvr_tutorial/index.html
@@ -82,7 +82,7 @@
 
             <main class="grid-main__info">
                 <h1 class="grid-main__heading">OpenVR2Key Tutorial</h1>
-                <p class="grid-main__paragraph">This tutorial video teaches viewers how they can use "OpenVR2Key" with their VR controllers to manipulate keyboard controls. I am a big fan of Virtual Reality and I noticed that nobody talked about this surprisingly helpful software, so I felt that I had to make a video about it. feel This video was made possible thanks to everyone who helped provide assets for the video, such as animated graphics and music.</p>
+                <p class="grid-main__paragraph">This tutorial video teaches viewers how they can use "OpenVR2Key" with their VR controllers to manipulate keyboard controls. I am a big fan of Virtual Reality and I noticed that nobody talked about this surprisingly helpful software, so I felt that I had to make a video about it. This video was made possible thanks to everyone who helped provide assets for the video, such as animated graphics and music.</p>
                 <div class="grid-main__programs">
                     <h3>Programs Used</h3>
                     <ul id="program-list">
