--- a/commissions.html
+++ b/commissions.html
@@ -97,18 +97,11 @@
             z-index: 2;
         }
 
-        .svg-heading__text,
-        .svg-heading__text-drops{
+        .svg-heading__text{
             fill: var(--clr-darkest);
             font-family: "acumin-variable", sans-serif;
             font-variation-settings: "wght" 800, "wdth" 115, "ital" 12;
             font-style: italic;
-        }
-        .svg-heading__text-drops{
-            opacity: 0.25;
-            transform: translate(10px, 10px);
-            user-select: none;
-            pointer-events: none;
         }
         .svg-heading__text__hey{
             font-size: 9.6rem;
@@ -162,7 +155,6 @@
             font-variation-settings: "wght" 800, "wdth" 115, "ital" 12;
             font-size: 5.2rem;
             font-style: italic;
-            text-shadow: 5px 5px hsl(171, 93%, 22%);
         }
 
         #prefs-positive{grid-area: b;}
@@ -366,7 +358,6 @@
             font-family: "acumin-variable", sans-serif;
             font-variation-settings: 'wght' 700, 'wdth' 50, 'slnt' 0;
             fill: #fff;
-            text-shadow: 5px 5px hsl(36, 88%, 29%);
         }
         .process-splat__text text:nth-child(1){
             font-size: 6.5rem;
@@ -701,14 +692,6 @@
                     <path d="M177.44,196.19c-16.34,21.53-39.46,34.96-65.1,34.96-14.89,0-28.91-4.55-41.26-12.56,15.19,12.67,33.44,20.06,53.08,20.06s38.9-7.81,54.33-21.12c-.37-7.1-.67-14.22-1.06-21.33Z"/>
                     <path d="M154.98,16.77c22.81,11.82,35.85,35.02,45.57,57.8,8.63,20.21,13.72,41.51,18.14,63,.73-5.95,1.12-12.05,1.12-18.26C219.8,53.42,176.98,0,124.16,0,104.52,0,86.27,7.39,71.08,20.06c12.35-8.01,26.38-12.56,41.26-12.56,8.12,0,15.98,1.35,23.46,3.88,5.79-1.07,14.76,3.11,19.17,5.4Z"/>
                     <g class="svg-heading__text">
-                        <text class="svg-heading__text__hey" transform="translate(264.57 192.43)">
-                            <tspan x="0" y="0">hey!</tspan>
-                        </text>
-                        <text class="svg-heading__text__sub" transform="translate(342.27 298.61)">
-                            <tspan x="0" y="0">need an</tspan>
-                        </text>
-                    </g>
-                    <g class="svg-heading__text-drops">
                         <text class="svg-heading__text__hey" transform="translate(264.57 192.43)">
                             <tspan x="0" y="0">hey!</tspan>
                         </text>
