Begin Fiverr Revision

--- a/commissions.html
+++ b/commissions.html
@@ -40,7 +40,7 @@
                 "info"
                 "divider"
                 "process"
-                "disclaimer";
+                "contact";
             max-width: 50%;
             margin-inline: auto;
             margin-bottom: calc(var(--space-largest) * 2);
@@ -379,12 +379,12 @@
             margin-bottom: var(--space-largest) !important;
         }
 
-        #disclaimer{
-            grid-area: disclaimer;
+        #contact{
+            grid-area: contact;
             display: grid;
         }
 
-        #disclaimer h3{
+        /* #disclaimer h3{
             font-family: "acumin-variable", sans-serif;
             font-variation-settings: "wght" 800, "wdth" 100, "ital" 12;
             font-style: italic;
@@ -408,9 +408,9 @@
             font-variation-settings: "wght" 300, "wdth" 100, "ital" 0;
             font-size: var(--txt-p);
             line-height: var(--txt-lh-p);
-        }
+        } */
 
-        #disclaimer a{
+        #contact a{
             place-self: center;
         }
 
@@ -897,10 +897,10 @@
 
                 <section id="process-paragraph">
                     <p>
-                        A commission begins with me inspecting your requested video files, asking a series of questions, and effectively communicating with you to ensure that we are both mutually aware of and agree upon the desired project. Once we both agree on the project, I will request half of the project's estimated cost to be paid up front. Work on your project will not begin until half of the total estimated cost is paid upfront.
+                        I personally like to start with nothing but communication between me and my client before carefully planning and organizing all of the prerequisites for the project. I will typically edit my videos in waves on different days, prioritizing repetitive edits first before cosmetic edits, such as VFX.
                     </p>
                     <p>
-                        Once the project begins, I will keep in touch and send frequent progress updates, aiming for a feedback-driven design process that will keep your interests in focus. Once you proclaim the project finished, I will request the second half of the estimated cost to be paid, and then I will provide the finished video to you!
+                        I focus on creating an enjoyable viewer experience, whether it is fun, informative, artistic—no matter what the project is, I want to give your video true meaning. I never like to leave stones unturned, and it is always important to me that my clients get what they desire most. If you'd ever like to commission a video from me, then thanks! It means a lot to me that people would ever consider working with me as their video editor.
                     </p>
                 </section>
 
@@ -1042,23 +1042,7 @@
                 </div>
             </div>
 
-            <section id="disclaimer">
-                <h3>Disclaimer</h3>
-                <p>
-                    I reserve the right to withdraw a commission, including but not limited to situations where:
-                </p>
-                <ul>
-                    <li>Clients continuously request drastic or unproductive changes that waste my time</li>
-                    <li>Clients attempt/beg to offer an absurd counter payment (i.e. "payment with exposure")</li>
-                    <li>Clients create a hostile or otherwise undesirable work environment</li>
-                    <li>Clients are under 18 years of age</li>
-                </ul>
-                <p>
-                    In situations where the client's requested changes to their project will require more working hours than initially projected, an additional overtime charge must be paid upfront before work on the project can continue. These overtime charges are estimated based upon my hourly wage and will be fully communicated to the client in these situations. I enforce these overtime charges because video editing can take a long time and I need to ensure that my time is properly spent and not wasted.
-                </p>
-                <p>
-                    I will only use Venmo for payment exchange and do not accept refunds, with no exceptions. I enforce this to prevent friendly/chargeback fraud.
-                </p>
+            <section id="contact">
                 <a class="button" href="contact.html">are you interested???? :3</a>
             </section>
         </div>
