--- a/contact.html
+++ b/contact.html
@@ -339,7 +339,7 @@
         </svg>
 
         <main class="grid-main">
-            <div class="grid-hero-lt">
+            <div class="grid-hero-lt" title="Let's talk!" aria-label="Let's Talk!">
                 <svg id="svg-contact-main" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1735.65 936.06">
                     <g class="svg-contact-main__lets">
                         <path d="M0,545.3v-214.76H42.16v214.76H0Z"/>
@@ -375,6 +375,12 @@
                     <a href="https://www.instagram.com/inktrinket_/" target="_blank">
                         <img src="svg/socials/socials_Instagram.svg" alt="Instagram icon" data-invert-dark="true">
                         <p>Instagram</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.fiverr.com/inktrinket/give-your-video-a-unique-and-interesting-personality?context_referrer=tailored_homepage_perseus&source=recently_viewed_gigs&ref_ctx_id=68b9af50066f439a8ecb5d006a1469d5&context=recommendation&pckg_id=1&pos=1&context_alg=recently_viewed&seller_online=true&imp_id=ef5938a7-91d4-4e19-acc0-41c558376c75" target="_blank">
+                        <img src="svg/socials/socials_Fiverr.svg" alt="Instagram icon" data-invert-dark="true">
+                        <p>Fiverr</p>
                     </a>
                 </li>
                 <li>
