--- a/commissions.html
+++ b/commissions.html
@@ -29,7 +29,7 @@
             grid-template-areas:
                 "heading"
                 "subheading";
-            max-width: 50%;
+            max-width: 60%;
             margin-inline: auto;
             margin-bottom: calc(var(--space-largest) * 2);
         }
@@ -58,8 +58,11 @@
             grid-area: subheading;
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: auto;
+            grid-template-rows: auto auto;
             gap: var(--space-largest);
+            row-gap: calc(var(--space-largest) * 2);
+            max-width: 83.33%;
+            margin-inline: auto;
         }
         .grid-infographic_info{
             --padding-mod: 2;
@@ -474,12 +477,14 @@
             .grid-middle{
                 grid-template-columns: 1fr;
                 grid-template-rows: repeat(2, auto);
+                max-width: 100%;
+                row-gap: var(--space-largest);
             }
-            .grid-middle .middle-text{
-                order: 1;
+            .grid-middle .middle-text:nth-of-type(2){
+                order: 4;
             }
-            .grid-middle video{
-                order: 2;
+            .grid-middle video:nth-of-type(2){
+                order: 3;
             }
             
             .grid-infographic_info{
@@ -719,26 +724,35 @@
                     <path d="M95.64,0C42.82,0,0,53.42,0,119.32s42.82,119.32,95.64,119.32,95.64-53.42,95.64-119.32S148.46,0,95.64,0Zm0,26.09c8.44,0,15.29,8.54,15.29,19.07s-6.84,19.07-15.29,19.07-15.29-8.54-15.29-19.07,6.84-19.07,15.29-19.07Zm-59.44,112.3c-8.44,0-15.29-8.54-15.29-19.07s6.84-19.07,15.29-19.07,15.29,8.54,15.29,19.07-6.84,19.07-15.29,19.07Zm59.44,74.16c-8.44,0-15.29-8.54-15.29-19.07s6.84-19.07,15.29-19.07,15.29,8.54,15.29,19.07-6.84,19.07-15.29,19.07Zm0-57.65c-15.75,0-28.52-15.93-28.52-35.59s12.77-35.59,28.52-35.59,28.52,15.93,28.52,35.59-12.77,35.59-28.52,35.59Zm61.99-16.52c-8.44,0-15.29-8.54-15.29-19.07s6.84-19.07,15.29-19.07,15.29,8.54,15.29,19.07-6.84,19.07-15.29,19.07Z"/>
                     <path d="M191.9,344.35c0-2.86-1.18-5.43-3.07-7.29l99.25-101.55-22.68,6.97c-27.15,8.34-49.48,27.84-61.39,53.62l-18.02,39c-1.3-.6-2.74-.95-4.27-.95-2.12,0-4.08,.65-5.71,1.75l-18.39-27.19c-9.84-14.54-25.6-21.98-41.44-21.98-13.91,0-27.87,5.74-37.91,17.45-13.53,15.78-2.32,40.17,18.47,40.17h74.79c0,2.81,1.14,5.36,2.99,7.21l-52.88,52.88c-14.7,14.7-5.39,39.87,15.34,41.46,1.32,.1,2.64,.15,3.93,.15,31.01,0,54.97-28.38,48.97-59.46l-6.22-32.24c4.7-.9,8.26-5.04,8.26-10Zm-95.17-9.33c-6.02,0-11.12-3.27-13.63-8.73-2.52-5.47-1.68-11.46,2.24-16.03,7.73-9.02,18.97-14.19,30.83-14.19,13.53,0,26.14,6.69,33.71,17.88l14.26,21.08H96.73Zm75.43,86.91c-7.76,9.4-19.16,14.8-31.26,14.8-1.06,0-2.15-.04-3.22-.12-6-.46-10.83-4.11-12.92-9.75-2.09-5.65-.79-11.56,3.46-15.81l47.67-47.67,4.82,24.99c2.31,11.96-.81,24.19-8.55,33.57Z"/>
                 </svg>
+
+                <iframe id="hero-video" class="" width="100%" height="100%" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
+                    src="https://www.youtube.com/embed/RIdc29Dk7B0?si=0TsoTlZ7Q6jvRB4V">
+                </iframe>
+            </div>
+
+            <div class="grid-middle">
                 <video id="hero-video" width="100%" autoplay muted loop playsinline preload="metadata">
                     <source src="/video/websitevid_01.mp4" type="video/mp4">
                     Your browser doesn't support video elements.
                 </video>
-            </div>
-
-            <main class="grid-middle">
+                <div class="middle-text">
+                    <h2>"Wait, you edit videos for people?"</h2>
+                    <p>Hehe, yeah, I take commissions over at <a href="https://www.fiverr.com/s/e675d5E" target="_blank">Fiverr</a>! :3</p>
+                    <p>It allows me to generate income doing one of the things I love to do most, all while turning people's dreams into realized content for the world to enjoy.</p>
+                </div>
+                <div class="middle-text">
+                    <h2>"Cool! How does it work?"</h2>
+                    <p>It's a multi-step process that ensures that I can create the best video possible for you, all while creating an enjoyable experience for your viewers.</p>
+                    <p>Scroll down and I'll give you some more info!</p>
+                </div>
                 <video width="100%" autoplay muted loop playsinline preload="metadata">
                     <source src="/video/websitevid_02.mp4" type="video/mp4">
                     Your browser doesn't support video elements.
                 </video>
-                <div class="middle-text">
-                    <h2>I could edit your video for you!</h2>
-                    <p>As a video designer, I take commissions on the side to utilize and hone my skills.</p>
-                    <p>I focus on planning my design process, maintaining organization, and prioritizing communication with my clients. I also love to edit various styles of videos!</p>
-                </div>
-            </main>
+            </div>
         </div>
 
-        <div class="grid-main">
+        <main class="grid-main">
             <div class="grid-infographic_info">
                 <svg id="info-banner" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1284.52 403.97">
                     <g class="info-banner__shape-color">
@@ -1045,7 +1059,7 @@
             <section id="contact">
                 <a class="button" href="contact.html">are you interested???? :3</a>
             </section>
-        </div>
+        </main>
     </div>
 
     <script type="text/javascript">
