4K portrait & (poorly) fix commission hero video border on Firefox

--- a/about.html
+++ b/about.html
@@ -150,6 +150,15 @@
             fill: #8c71ff;
         }
 
+        /* 4K Portrait */
+        @media only screen and (min-width: 1367px) and (max-width: 1440px) and (orientation: portrait){
+            
+            .grid-main{
+                max-width: 75%;
+            }
+
+        }
+
         /* Tablet landscape */
         @media only screen and (min-width: 1051px) and (max-width: 1366px) and (orientation: landscape){ /* between 1051px and 1366px */
             
