--- a/contact.html
+++ b/contact.html
@@ -149,6 +149,7 @@
             right: 0;
         }
 
+        /* 4K */
         @media only screen and (min-width: 2500px){
             .grid-socials li a p{
                 font-size: 2rem;
@@ -156,6 +157,48 @@
             .grid-socials li a img{
                 min-width: 9rem;
             }
+        }
+
+        /* 4K Portrait */
+        @media only screen and (min-width: 1367px) and (max-width: 1440px) and (orientation: portrait){
+            
+            .grid-main{
+                max-width: 75%;
+            }
+            #svg-contact-left,
+            #svg-contact-right{
+                display: none
+            }
+
+            .grid-socials{
+                grid-auto-flow: row;
+                margin-inline: auto;
+                gap: var(--space-smallest);
+            }
+            .grid-socials li a{
+                flex-direction: row;
+                justify-content: flex-start;
+                gap: var(--space-small);
+            }
+            .grid-socials li a img{
+                width: 8rem;
+                margin: 0;
+            }
+            .grid-socials li a p{
+                text-align: left;
+                align-self: center;
+                font-size: var(--txt-h3);
+            }
+
+            .toast{
+                position: absolute;
+                top: 40%;
+                left: 0%;
+                transform: translate(80%);
+                height: 100%;
+                align-content: center;
+            }
+
         }
 
         /* Tablet landscape */
