--- a/commissions.html
+++ b/commissions.html
@@ -128,19 +128,42 @@
         }
 
         #hero-video{
-            border-radius: var(--space-small);
             max-width: 100%;
             place-self: center;
+            width: 100%;
+            height: 100%;
+            position: relative;
+        }
+
+        #hero-video iframe{
+            border-radius: var(--space-small);
             aspect-ratio: 16 / 9;
         }
 
+        #hero-video::after{
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            height: 100%;
+            transform-origin: center center;
+            transform: translate(-50%, -50%) scale(101%);
+            border-radius: var(--space-small);
+            border: 5px solid;
+            border-color: var(--clr-lightest);
+            z-index: 5;
+            user-select: none;
+            pointer-events: none;
+        }
+
         @supports not (aspect-ratio: 16 / 9) { /* Fallback for aspect-ratio */
-            #hero-video::before {
+            #hero-video iframe::before {
                 float: left;
                 padding-top: 56.25%;
                 content: "";
             }
-            #hero-video::after {
+            #hero-video iframe::after {
                 display: block;
                 content: "";
                 clear: both;
@@ -460,10 +483,21 @@
             fill: var(--clr-lightest) !important;
         }
 
+        /* 4K */
         @media only screen and (min-width: 2500px){
             #price-venmo{
                 width: 4.5rem;
             }
+        }
+
+        /* 4K Portrait */
+        @media only screen and (min-width: 1367px) and (max-width: 1440px) and (orientation: portrait){
+            
+            .grid-heading,
+            .grid-main{
+                max-width: 75%;
+            }
+
         }
 
         /* Tablet landscape */
@@ -476,6 +510,7 @@
 
         }
 
+        /* Tablet & Phone */
         @media only screen and (max-width: 1050px){
             .grid-heading{
                 max-width: 80%;
@@ -739,9 +774,11 @@
                     <path d="M191.9,344.35c0-2.86-1.18-5.43-3.07-7.29l99.25-101.55-22.68,6.97c-27.15,8.34-49.48,27.84-61.39,53.62l-18.02,39c-1.3-.6-2.74-.95-4.27-.95-2.12,0-4.08,.65-5.71,1.75l-18.39-27.19c-9.84-14.54-25.6-21.98-41.44-21.98-13.91,0-27.87,5.74-37.91,17.45-13.53,15.78-2.32,40.17,18.47,40.17h74.79c0,2.81,1.14,5.36,2.99,7.21l-52.88,52.88c-14.7,14.7-5.39,39.87,15.34,41.46,1.32,.1,2.64,.15,3.93,.15,31.01,0,54.97-28.38,48.97-59.46l-6.22-32.24c4.7-.9,8.26-5.04,8.26-10Zm-95.17-9.33c-6.02,0-11.12-3.27-13.63-8.73-2.52-5.47-1.68-11.46,2.24-16.03,7.73-9.02,18.97-14.19,30.83-14.19,13.53,0,26.14,6.69,33.71,17.88l14.26,21.08H96.73Zm75.43,86.91c-7.76,9.4-19.16,14.8-31.26,14.8-1.06,0-2.15-.04-3.22-.12-6-.46-10.83-4.11-12.92-9.75-2.09-5.65-.79-11.56,3.46-15.81l47.67-47.67,4.82,24.99c2.31,11.96-.81,24.19-8.55,33.57Z"/>
                 </svg>
 
-                <iframe id="hero-video" class="" width="100%" height="100%" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
-                    src="https://www.youtube.com/embed/JPbnNTvjP9A?si=gNeyNJKjkLZJNCXz">
-                </iframe>
+                <div id="hero-video">
+                    <iframe class="" width="100%" height="100%" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
+                        src="https://www.youtube.com/embed/JPbnNTvjP9A?si=gNeyNJKjkLZJNCXz">
+                    </iframe>
+                </div>
             </div>
 
             <div class="grid-middle">
