--- a/portfolio_personal.html
+++ b/portfolio_personal.html
@@ -64,6 +64,17 @@
             fill: #ff6464;
         }
 
+        /* 4K Portrait */
+        @media only screen and (min-width: 1367px) and (max-width: 1440px) and (orientation: portrait){
+            .blot{
+                display: none;
+            }
+
+            #svg-heading{
+                max-width: 100%;
+            }
+        }
+
         /* Tablet landscape */
         @media only screen and (min-width: 1051px) and (max-width: 1366px) and (orientation: landscape){ /* between 1051px and 1366px */
             
