--- a/portfolio_professional.html
+++ b/portfolio_professional.html
@@ -63,6 +63,18 @@
             right: 0;
         }
 
+        /* 4K Portrait */
+        @media only screen and (min-width: 1367px) and (max-width: 1440px) and (orientation: portrait){
+            #svg-proport-left,
+            #svg-proport-right{
+                display: none;
+            }
+
+            #svg-heading{
+                max-width: 100%;
+            }
+        }
+
         /* Tablet landscape */
         @media only screen and (min-width: 1051px) and (max-width: 1366px) and (orientation: landscape){ /* between 1051px and 1366px */
             
