Fix video border on 4K

--- a/commissions.html
+++ b/commissions.html
@@ -485,6 +485,10 @@
 
         /* 4K */
         @media only screen and (min-width: 2500px){
+            #hero-video::after{
+                border-width: 7px;
+            }
+
             #price-venmo{
                 width: 4.5rem;
             }
