Adjust 4K portrait to support 1K portrait as well

--- a/portfolio_personal.html
+++ b/portfolio_personal.html
@@ -64,8 +64,8 @@
             fill: #ff6464;
         }
 
-        /* 4K Portrait */
-        @media only screen and (min-width: 1367px) and (max-width: 1440px) and (orientation: portrait){
+        /* 1K + 4K Portrait */
+        @media only screen and (min-width: 1051px) and (max-width: 1440px) and (orientation: portrait){
             .blot{
                 display: none;
             }
