--- a/about.html
+++ b/about.html
@@ -150,8 +150,8 @@
             fill: #8c71ff;
         }
 
-        /* 4K Portrait */
-        @media only screen and (min-width: 1367px) and (max-width: 1440px) and (orientation: portrait){
+        /* 1K + 4K Portrait */
+        @media only screen and (min-width: 1051px) and (max-width: 1440px) and (orientation: portrait){
             
             .grid-main{
                 max-width: 75%;
