--- a/contact.html
+++ b/contact.html
@@ -159,8 +159,8 @@
             }
         }
 
-        /* 4K Portrait */
-        @media only screen and (min-width: 1367px) and (max-width: 1440px) and (orientation: portrait){
+        /* 1K + 4K Portrait */
+        @media only screen and (min-width: 1051px) and (max-width: 1440px) and (orientation: portrait){
             
             .grid-main{
                 max-width: 75%;
