--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
             line-height: 2vw;
         }
 
-        /* 4K Portrait */
-        @media only screen and (min-width: 1367px) and (max-width: 1440px) and (orientation: portrait){
+        /* 1K + 4K Portrait */
+        @media only screen and (min-width: 1051px) and (max-width: 1440px) and (orientation: portrait){
 
             #crane-anim,
             #svg-border-01,
