--- a/portfolio_professional.html
+++ b/portfolio_professional.html
@@ -63,8 +63,8 @@
             right: 0;
         }
 
-        /* 4K Portrait */
-        @media only screen and (min-width: 1367px) and (max-width: 1440px) and (orientation: portrait){
+        /* 1K + 4K Portrait */
+        @media only screen and (min-width: 1051px) and (max-width: 1440px) and (orientation: portrait){
             #svg-proport-left,
             #svg-proport-right{
                 display: none;
