Fix About page height on 1K + 4K portrait

--- a/about.html
+++ b/about.html
@@ -153,6 +153,10 @@
         /* 1K + 4K Portrait */
         @media only screen and (min-width: 1051px) and (max-width: 1440px) and (orientation: portrait){
             
+            #main_wrapper{
+                min-height: 100vh;
+            }
+
             .grid-main{
                 max-width: 75%;
             }
