Remove spacing on timezone section

--- a/commissions.html
+++ b/commissions.html
@@ -314,7 +314,7 @@
             grid-template-columns: 1fr 4fr;
             grid-template-rows: auto;
             gap: calc(var(--space-largest) * 1.75);
-            padding: var(--space-large);
+            padding: var(--space-smallest);
             max-width: 90%;
             align-items: center;
         }
