Fix gap on commissions timezone section graphic

--- a/commissions.html
+++ b/commissions.html
@@ -313,7 +313,7 @@
             display: grid;
             grid-template-columns: 1fr 4fr;
             grid-template-rows: auto;
-            gap: calc(var(--space-largest) * 1.75);
+            gap: var(--space-largest);
             padding: var(--space-smallest);
             max-width: 90%;
             align-items: center;
@@ -321,7 +321,7 @@
 
         #timezone_icon{
             height: 5rem;
-            margin-bottom: 1rem;
+            margin-bottom: 0.5rem;
         }
         #timezone_icon path{
             fill: var(--clr-lightest);
