Remove timezone section gap in 4K

--- a/commissions.html
+++ b/commissions.html
@@ -445,8 +445,8 @@
                 border-width: 7px;
             }
 
-            #price-venmo{
-                width: 4.5rem;
+            #fiverr-timezone .block_big{
+                gap: 0;
             }
         }
 
